# heliboard-custom

./: .gitignore  CHANGELOG.md  FEATURES.md  GAP_ANALYSIS.md  QUICK_TEXT_TECH_DEBT.md  ROADMAP.md  SETTINGS_AUDIT.md  SETTINGS_RESTRUCTURE.md  WHISPERCLICK_PRODUCT_PLAN.md  settings.gradle
.github/workflows/: build-debug-apk.yml  build-release.yml  build-test-auto.yml  ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: slide_down_out.xml  slide_up_in.xml
app/src/main/res/drawable/: btn_keyboard_key_normal_rounded_base_border.xml  btn_keyboard_key_pressed_functional_rounded_base_border.xml  btn_keyboard_key_pressed_rounded_base.xml  clipboard_entry_background.xml  ic_more_horiz.xml  ic_quick_text_holo.xml  ic_quick_text_lxx.xml  ic_quick_text_rounded.xml  ic_resize_drag.xml  ic_rewrite.xml
app/src/main/res/layout/: clipboard_entry_key.xml  main_keyboard_frame.xml  resize_mode_overlay.xml  suggestions_strip.xml
app/src/main/res/values/: colors.xml  config-common.xml  config.xml  donottranslate.xml  strings-talkback-descriptions.xml  strings.xml
app/src/main/res/values-land/: config.xml
app/src/main/res/values-sw600dp/: config.xml
app/src/main/res/values-sw600dp-land/: config.xml
app/src/main/res/values-sw768dp/: config.xml
app/src/main/res/values-sw768dp-land/: config.xml
app/src/main/res/xml/: network_security_config.xml
whisper/: build.gradle.kts
whisper/bench/: CMakeLists.txt  bench.c
whisper/src/main/jni/whisper/: CMakeLists.txt  jni.c
(+94 files in other folders)
